# space-crabs

./: .gitignore  Cargo.toml  README.md  dokumentacja.md
src/: main.rs
src/api/: expedition_api.rs  mod.rs  other_apis.rs  user_api.rs  user_expedition_api.rs
src/models/: expedition_model.rs  mod.rs  user_model.rs
src/repository/: mongodb_repo.rs
static/css/: account.css  authorization.css  expedition.css  expeditions.css  main.css  user.css  users.css
static/js/: account.js  cookies.js  expedition.js  main.js  users.js
templates/: account.html.tera  contacts.html.tera  expedition.html.tera  expeditions.html.tera  index.html.tera  login.html.tera  signup.html.tera  user.html.tera  users.html.tera
