[package]
name = "space-crabs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json","secrets"]}
serde = "1.0.136" # framework for serializing and deserializing Rust data structures.
dotenv = "0.15.0" # library for managing environment variables
tera = "1.0"
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars", "tera"] }
rust-argon2 = "1.0"


[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 